--- a/index2.html
+++ b/index2.html
@@ -28,8 +28,8 @@ lightblue">
 
 <br></br>
 <audio width="200" controls>
-<source src="13/13.mp3" type="audio/mp3">
-<source src="13/13.ogg" type="audio/ogg">
+<source src="13.mp3" type="audio/mp3">
+<source src="13.ogg" type="audio/ogg">
 your browser deos not support 
 HTML5 audio.
 </audio>
